{
  "version": 4,
  "terraform_version": "1.5.6",
  "serial": 522,
  "lineage": "b7adf261-3847-5213-2928-d1cd549cda81",
  "resources": [
    {
      "module": "module.Application_Gateway",
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "app_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [
              {
                "max_capacity": 2,
                "min_capacity": 1
              }
            ],
            "backend_address_pool": [
              {
                "fqdns": [
                  "aztek-idan-python-web-app.azurewebsites.net"
                ],
                "id": "/subscriptions/140bd411-21fe-4b66-93f9-81f6e37e9963/resourceGroups/Aztek-App-RG/providers/Microsoft.Network/applicationGateways/app_gw/backendAddressPools/app_gw-Back_end",
                "ip_addresses": [],
                "name": "app_gw-Back_end"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/140bd411-21fe-4b66-93f9-81f6e37e9963/resourceGroups/Aztek-App-RG/providers/Microsoft.Network/applicationGateways/app_gw/backendHttpSettingsCollection/app_gw-http_settings",
                "name": "app_gw-http_settings",
                "path": "/",
                "pick_host_name_from_backend_address": true,
                "port": 80,
                "probe_id": "/subscriptions/140bd411-21fe-4b66-93f9-81f6e37e9963/resourceGroups/Aztek-App-RG/providers/Microsoft.Network/applicationGateways/app_gw/probes/App_Probe",
                "probe_name": "App_Probe",
                "protocol": "Http",
                "request_timeout": 60,
                "trusted_root_certificate_names": []
              }
            ],
            "custom_error_configuration": [],
            "enable_http2": false,
            "fips_enabled": false,
            "firewall_policy_id": "/subscriptions/140bd411-21fe-4b66-93f9-81f6e37e9963/resourceGroups/Aztek-App-RG/providers/Microsoft.Network/applicationGatewayWebApplicationFirewallPolicies/waf_policy_agw",
            "force_firewall_policy_association": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/140bd411-21fe-4b66-93f9-81f6e37e9963/resourceGroups/Aztek-App-RG/providers/Microsoft.Network/applicationGateways/app_gw/frontendIPConfigurations/app_gw-Front_end_conf",
                "name": "app_gw-Front_end_conf",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "private_link_configuration_id": "",
                "private_link_configuration_name": "",
                "public_ip_address_id": "/subscriptions/140bd411-21fe-4b66-93f9-81f6e37e9963/resourceGroups/Aztek-App-RG/providers/Microsoft.Network/publicIPAddresses/AGW_PublicIP",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/140bd411-21fe-4b66-93f9-81f6e37e9963/resourceGroups/Aztek-App-RG/providers/Microsoft.Network/applicationGateways/app_gw/frontendPorts/app_gw-Front_end_http",
                "name": "app_gw-Front_end_http",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/140bd411-21fe-4b66-93f9-81f6e37e9963/resourceGroups/Aztek-App-RG/providers/Microsoft.Network/applicationGateways/app_gw/gatewayIPConfigurations/my-gateway-ip-configuration",
                "name": "my-gateway-ip-configuration",
                "subnet_id": "/subscriptions/140bd411-21fe-4b66-93f9-81f6e37e9963/resourceGroups/Aztek-App-RG/providers/Microsoft.Network/virtualNetworks/Aztek_Vnet/subnets/App_gateway_subnet"
              }
            ],
            "global": [],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "firewall_policy_id": "",
                "frontend_ip_configuration_id": "/subscriptions/140bd411-21fe-4b66-93f9-81f6e37e9963/resourceGroups/Aztek-App-RG/providers/Microsoft.Network/applicationGateways/app_gw/frontendIPConfigurations/app_gw-Front_end_conf",
                "frontend_ip_configuration_name": "app_gw-Front_end_conf",
                "frontend_port_id": "/subscriptions/140bd411-21fe-4b66-93f9-81f6e37e9963/resourceGroups/Aztek-App-RG/providers/Microsoft.Network/applicationGateways/app_gw/frontendPorts/app_gw-Front_end_http",
                "frontend_port_name": "app_gw-Front_end_http",
                "host_name": "",
                "host_names": [],
                "id": "/subscriptions/140bd411-21fe-4b66-93f9-81f6e37e9963/resourceGroups/Aztek-App-RG/providers/Microsoft.Network/applicationGateways/app_gw/httpListeners/app_gw-http_listener",
                "name": "app_gw-http_listener",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": "",
                "ssl_profile_id": "",
                "ssl_profile_name": ""
              }
            ],
            "id": "/subscriptions/140bd411-21fe-4b66-93f9-81f6e37e9963/resourceGroups/Aztek-App-RG/providers/Microsoft.Network/applicationGateways/app_gw",
            "identity": [],
            "location": "westeurope",
            "name": "app_gw",
            "private_endpoint_connection": [],
            "private_link_configuration": [],
            "probe": [
              {
                "host": "aztek-idan-python-web-app.azurewebsites.net",
                "id": "/subscriptions/140bd411-21fe-4b66-93f9-81f6e37e9963/resourceGroups/Aztek-App-RG/providers/Microsoft.Network/applicationGateways/app_gw/probes/App_Probe",
                "interval": 30,
                "match": [
                  {
                    "body": "",
                    "status_code": []
                  }
                ],
                "minimum_servers": 0,
                "name": "App_Probe",
                "path": "/",
                "pick_host_name_from_backend_http_settings": false,
                "port": 0,
                "protocol": "Http",
                "timeout": 30,
                "unhealthy_threshold": 3
              }
            ],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/140bd411-21fe-4b66-93f9-81f6e37e9963/resourceGroups/Aztek-App-RG/providers/Microsoft.Network/applicationGateways/app_gw/backendAddressPools/app_gw-Back_end",
                "backend_address_pool_name": "app_gw-Back_end",
                "backend_http_settings_id": "/subscriptions/140bd411-21fe-4b66-93f9-81f6e37e9963/resourceGroups/Aztek-App-RG/providers/Microsoft.Network/applicationGateways/app_gw/backendHttpSettingsCollection/app_gw-http_settings",
                "backend_http_settings_name": "app_gw-http_settings",
                "http_listener_id": "/subscriptions/140bd411-21fe-4b66-93f9-81f6e37e9963/resourceGroups/Aztek-App-RG/providers/Microsoft.Network/applicationGateways/app_gw/httpListeners/app_gw-http_listener",
                "http_listener_name": "app_gw-http_listener",
                "id": "/subscriptions/140bd411-21fe-4b66-93f9-81f6e37e9963/resourceGroups/Aztek-App-RG/providers/Microsoft.Network/applicationGateways/app_gw/requestRoutingRules/app_gw-http_role",
                "name": "app_gw-http_role",
                "priority": 1,
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "Aztek-App-RG",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 0,
                "name": "WAF_v2",
                "tier": "WAF_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "AppGwSslPolicy20150501",
                "policy_type": "Predefined"
              }
            ],
            "ssl_profile": [],
            "tags": {
              "created_By": "None",
              "created_Date": "14-08-2024"
            },
            "timeouts": null,
            "trusted_client_certificate": [],
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [
              {
                "disabled_rule_group": [],
                "enabled": true,
                "exclusion": [],
                "file_upload_limit_mb": 100,
                "firewall_mode": "Prevention",
                "max_request_body_size_kb": 128,
                "request_body_check": true,
                "rule_set_type": "OWASP",
                "rule_set_version": "3.2"
              }
            ],
            "zones": null
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "gateway_ip_configuration"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "subnet_id"
              }
            ]
          ],
          "dependencies": [
            "azurerm_resource_group.web-RG",
            "azurerm_service_plan.service_plan",
            "module.Application_Gateway.azurerm_public_ip.pip",
            "module.Application_Gateway.azurerm_web_application_firewall_policy.waf_policy_agw",
            "module.Virtual_Network.azurerm_subnet.App_gateway_subnet",
            "module.Virtual_Network.azurerm_virtual_network.Aztek_Vnet",
            "module.web_app.azurerm_linux_web_app.Web-app"
          ]
        }
      ]
    },
    {
      "module": "module.Application_Gateway",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/140bd411-21fe-4b66-93f9-81f6e37e9963/resourceGroups/Aztek-App-RG/providers/Microsoft.Network/publicIPAddresses/AGW_PublicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.45.59.47",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "AGW_PublicIP",
            "resource_group_name": "Aztek-App-RG",
            "sku": "Standard",
            "sku_tier": "Regional",
            "tags": {
              "created_By": "None",
              "created_Date": "14-08-2024"
            }
          },
          "dependencies": [
            "azurerm_resource_group.web-RG"
          ]
        }
      ]
    },
    {
      "module": "module.Virtual_Network",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "App_gateway_nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/140bd411-21fe-4b66-93f9-81f6e37e9963/resourceGroups/Aztek-App-RG/providers/Microsoft.Network/networkSecurityGroups/App_gateway_nsg",
            "location": "westeurope",
            "name": "App_gateway_nsg",
            "resource_group_name": "Aztek-App-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "65200-65535"
                ],
                "direction": "Inbound",
                "name": "Mandatory_Port_for_gw",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "GatewayManager",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow_Front_Door",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "AzureFrontDoor.Backend",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "created_By": "None",
              "created_Date": "14-08-2024"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.web-RG"
          ]
        }
      ]
    },
    {
      "module": "module.Virtual_Network",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "App_gateway_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/140bd411-21fe-4b66-93f9-81f6e37e9963/resourceGroups/Aztek-App-RG/providers/Microsoft.Network/virtualNetworks/Aztek_Vnet/subnets/App_gateway_subnet",
            "name": "App_gateway_subnet",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Aztek-App-RG",
            "service_endpoints": [
              "Microsoft.Web"
            ],
            "virtual_network_name": "Aztek_Vnet"
          },
          "dependencies": [
            "azurerm_resource_group.web-RG",
            "module.Virtual_Network.azurerm_virtual_network.Aztek_Vnet"
          ]
        }
      ]
    },
    {
      "module": "module.Virtual_Network",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_gw_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/140bd411-21fe-4b66-93f9-81f6e37e9963/resourceGroups/Aztek-App-RG/providers/Microsoft.Network/virtualNetworks/Aztek_Vnet/subnets/App_gateway_subnet",
            "network_security_group_id": "/subscriptions/140bd411-21fe-4b66-93f9-81f6e37e9963/resourceGroups/Aztek-App-RG/providers/Microsoft.Network/networkSecurityGroups/App_gateway_nsg",
            "subnet_id": "/subscriptions/140bd411-21fe-4b66-93f9-81f6e37e9963/resourceGroups/Aztek-App-RG/providers/Microsoft.Network/virtualNetworks/Aztek_Vnet/subnets/App_gateway_subnet"
          },
          "dependencies": [
            "azurerm_resource_group.web-RG",
            "module.Virtual_Network.azurerm_network_security_group.App_gateway_nsg",
            "module.Virtual_Network.azurerm_subnet.App_gateway_subnet",
            "module.Virtual_Network.azurerm_virtual_network.Aztek_Vnet"
          ]
        }
      ]
    },
    {
      "module": "module.Virtual_Network",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "Aztek_Vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "5f3a9072-7dc7-493e-bd69-014ef1a0da42",
            "id": "/subscriptions/140bd411-21fe-4b66-93f9-81f6e37e9963/resourceGroups/Aztek-App-RG/providers/Microsoft.Network/virtualNetworks/Aztek_Vnet",
            "location": "westeurope",
            "name": "Aztek_Vnet",
            "resource_group_name": "Aztek-App-RG",
            "tags": {
              "created_By": "None",
              "created_Date": "14-08-2024"
            }
          },
          "dependencies": [
            "azurerm_resource_group.web-RG"
          ]
        }
      ]
    }
  ]
}